--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
+        "krok/yii2-cp": "dev-master",
         "krok/yii2-language": "dev-master",
-        "krok/yii2-cp": "dev-master"
+        "krok/yii2-imperavi": "dev-master"
     },
     "autoload": {
         "psr-4": {
