--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "krok/yii2-cp": "*",
-        "krok/yii2-language": "*",
-        "krok/yii2-imperavi": "*"
+        "krok/yii2-cp": "0.1.x-dev",
+        "krok/yii2-language": "0.1.x-dev",
+        "krok/yii2-imperavi": "0.1.x-dev"
     },
     "autoload": {
         "psr-4": {
